--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,14 @@ form {
   width: 70%;
 }
 
+a {
+  color: green;
+}
+
+fieldset {
+  font-weight: bold;
+}
+
 .bg-img {
   background-image: url('img/background.jpg');
   height: 100vh;
@@ -33,8 +41,28 @@ form {
   display: flex;
   box-sizing: border-box;
   width: 30%;
+  flex-direction: column;
+  font-size: 14px;
 }
 
+.odin-logo {
+  box-sizing: border-box;
+  font-size: 36px;
+  height: 125px;
+  width: 100%;
+  margin: auto;
+  background-color: rgba(128, 128, 128, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Secular One', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color: whitesmoke;
+}
+
+.odin-logo img {
+  height: 100%;
+  width: auto;
+}
 
 .flex-background-right {
   display: flex;
@@ -47,6 +75,7 @@ form {
 .flex-right-top {
   max-height: 33%;
   padding: 6% 10% 6% 5%;
+  font-weight: bold;
 }
 
 .flex-right-center {
@@ -55,7 +84,7 @@ form {
   border-bottom: 1px solid lightgrey;
   padding: 3% 10% 3% 5%;
   display: flex;
-
+  box-shadow: 2px 2px 5px 1px rgba(126, 126, 126, 0.26);
 }
 
 .flex-right-bottom {
@@ -63,8 +92,23 @@ form {
   padding: 3% 10% 10% 5%;
 }
 
-input[type='button'] {
-  background-color: rgb(122, 153, 122);
+li label {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+li input {
+  height: 30px;
+  font-size: 18px;
+  border: 1px solid #E5E7EB;
+  border-radius: 5px;
+}
+
+
+li input:focus {
+  outline: 1px solid blue;
+  border: none;
+  box-shadow: 2px 2px 5px 1px rgba(126, 126, 126, 0.2);
 }
 
 form ul, fieldset {
@@ -79,17 +123,35 @@ form ul {
   flex-wrap: wrap;
 }
 
-
 form ul li {
   list-style-type: none;
-  margin: 10px 10px 10px 0;
-  padding: 10px 30px 10px 0;
+  margin: 10px 50px 10px 0;
+  padding: 10px 50px 10px 0;
   display: flex;
   max-width: 300px;
   flex-direction: column;
-  flex-basis: 40%;
+  flex-basis: 100%;
 }
 
-label {
-  position: relative;
+button[type='submit'] {
+  background-color: #596D48;
+  font-size: 18px;
+  font-weight: bold;
+  color: aliceblue;
+  padding: 15px 40px;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 2px 2px 10px 1px rgba(128, 128, 128, 0.473);
+  margin: 15px 0px 25px;
+  transition-duration: 0.3s;
+}
+
+button[type='submit']:hover {
+  cursor: pointer;
+  background-color: rgb(146, 236, 146);
+}
+
+button[type='submit']:active {
+  transform: scale(0.5);
+  background-color: rgb(75, 163, 64);
 }
