--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,8 @@ fieldset {
 
 .bg-img {
   background-image: url('img/background.jpg');
-  width: 100vw;
+  width: 100%;
+  height: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
   display: flex;
@@ -72,8 +73,8 @@ fieldset {
 }
 
 .flex-right-top {
-  max-height: 30%;
-  padding: 6% 10% 6% 5%;
+  max-height: 20%;
+  padding: 5% 10% 5% 5%;
   font-weight: bold;
 }
 
@@ -81,14 +82,14 @@ fieldset {
   min-height: 30%;
   border-top: 1px solid lightgrey;
   border-bottom: 1px solid lightgrey;
-  padding: 5% 10% 5% 5%;
+  padding: 5% 5% 5% 5%;
   display: flex;
   box-shadow: 2px 2px 5px 1px rgba(126, 126, 126, 0.26);
 }
 
 .flex-right-bottom {
-  max-height: 30%;
-  padding: 3% 10% 10% 5%;
+  max-height: 20%;
+  padding: 3% 10% 5% 5%;
 }
 
 li label {
@@ -124,8 +125,8 @@ form ul {
 
 form ul li {
   list-style-type: none;
-  margin: 10px 50px 10px 0;
-  padding: 10px 50px 10px 0;
+  margin: 10px 30px 10px 0;
+  padding: 10px 30px 10px 0;
   display: flex;
   max-width: 300px;
   flex-direction: column;
@@ -165,6 +166,16 @@ button[type='submit']:active {
   margin: 0;
   padding: 0;
   top: 60px;
+  
+}
+
+.pwd-req-flex {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.pwd-req-flex div {
+  flex-basis: 40%;
 }
 
 #confirm-pwd-field {
@@ -194,8 +205,7 @@ button[type='submit']:active {
 
 .validation-ok::before {
   position: relative;
-  left: -2px;
-  content: "\2714"; 
+  content: "\2714"; /* ✔ */
 }
 
 .validation-nok {
@@ -205,6 +215,5 @@ button[type='submit']:active {
 
 .validation-nok::before {
   position: relative;
-  left: -2px;
-  content: "\2718";
+  content: "\2718"; /* ✘ */
 }
