--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@ body {
   margin: 0;
 }
 
+a {
+  color: green;
+}
+
 form {
   display: flex;
   box-sizing: border-box;
@@ -17,18 +21,17 @@ form {
   width: 70%;
 }
 
-a {
-  color: green;
-}
-
 fieldset {
   font-weight: bold;
 }
 
+/* -------- Left part with logo -------- */
+
 .bg-img {
   background-image: url('img/background.jpg');
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  height: auto;
   background-repeat: no-repeat;
   background-attachment: fixed;
   display: flex;
@@ -64,12 +67,13 @@ fieldset {
   width: auto;
 }
 
+/* -------- Top right part -------- */
+
 .flex-background-right {
   display: flex;
   box-sizing: border-box;
   flex-direction: column;
   background-color: white;
-
 }
 
 .flex-right-top {
@@ -78,6 +82,8 @@ fieldset {
   font-weight: bold;
 }
 
+/* -------- Form part -------- */
+
 .flex-right-center {
   min-height: 30%;
   border-top: 1px solid lightgrey;
@@ -85,11 +91,6 @@ fieldset {
   padding: 5% 5% 5% 5%;
   display: flex;
   box-shadow: 2px 2px 5px 1px rgba(126, 126, 126, 0.26);
-}
-
-.flex-right-bottom {
-  max-height: 20%;
-  padding: 3% 10% 5% 5%;
 }
 
 li label {
@@ -103,7 +104,6 @@ li input {
   border: 1px solid #E5E7EB;
   border-radius: 5px;
 }
-
 
 li input:focus {
   outline: 1px solid blue;
@@ -133,29 +133,6 @@ form ul li {
   flex-basis: 100%;
 }
 
-button[type='submit'] {
-  background-color: #596D48;
-  font-size: 18px;
-  font-weight: bold;
-  color: aliceblue;
-  padding: 15px 40px;
-  border-radius: 5px;
-  border: none;
-  box-shadow: 2px 2px 10px 1px rgba(128, 128, 128, 0.473);
-  margin: 15px 0px 25px;
-  transition-duration: 0.3s;
-}
-
-button[type='submit']:hover {
-  cursor: pointer;
-  background-color: rgb(146, 236, 146);
-}
-
-button[type='submit']:active {
-  transform: scale(0.5);
-  background-color: rgb(75, 163, 64);
-}
-
 #pwd-field {
   position: relative;
 }
@@ -166,7 +143,6 @@ button[type='submit']:active {
   margin: 0;
   padding: 0;
   top: 60px;
-  
 }
 
 .pwd-req-flex {
@@ -194,10 +170,6 @@ button[type='submit']:active {
   visibility: hidden;
 }
 
-.visible {
-  visibility: visible;
-}
-
 .validation-ok {
   visibility: visible;
   color: green;
@@ -216,4 +188,40 @@ button[type='submit']:active {
 .validation-nok::before {
   position: relative;
   content: "\2718"; /* ✘ */
+}
+
+input:not(:placeholder-shown):not(:focus):invalid {
+  outline: 1px solid red;
+  border: none;
+  box-shadow: 2px 2px 5px 1px rgba(241, 4, 4, 0.432);
+}
+
+/* -------- Bottom part -------- */
+
+.flex-right-bottom {
+  max-height: 20%;
+  padding: 3% 10% 5% 5%;
+}
+
+button[type='submit'] {
+  background-color: #596D48;
+  font-size: 18px;
+  font-weight: bold;
+  color: aliceblue;
+  padding: 15px 40px;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 2px 2px 10px 1px rgba(128, 128, 128, 0.473);
+  margin: 15px 0px 25px;
+  transition-duration: 0.3s;
+}
+
+button[type='submit']:hover {
+  cursor: pointer;
+  background-color: rgb(146, 236, 146);
+}
+
+button[type='submit']:active {
+  transform: scale(0.5);
+  background-color: rgb(75, 163, 64);
 }
