--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ fieldset {
   font-size: 36px;
   height: 140px;
   width: 100%;
-  margin: 200px 0;
+  margin: 200px 0 0 0;
   background-color: rgba(128, 128, 128, 0.3);
   display: flex;
   justify-content: center;
